--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ snafu = { version = "0.6.3" }
 rand_chacha = { version = "0.2.2", default-features = false }
 rand_core = { version =  "0.5.1", default-features = false }
 sha2 = { version = "0.9.1", default-features = false }
+subtle = { version = "2.4.0", default-features = false }
